syntax = "proto3";

option csharp_namespace = "GrpcServer";

import "google/protobuf/empty.proto";

service ChatMessagesStreaming {
  rpc ChatMessagesStreaming (google.protobuf.Empty) returns (stream ReceivedMessage);
}

message ReceivedMessage{
  string user = 1;
  bytes message = 2;
}